# immutaball

./: .gitmodules  CHANGELOG.md  LICENSE.md  NOTES-building-dependencies.md  README.md  immutaball.cabal
src/: LICENSE.md  Main.hs  NOTES-building-dependencies.md  Putt.hs  Test.hs  immutaball-core.cabal
src/Control/Monad/Trans/: EitherM.hs  MaybeM.hs
src/Data/: LabeledBinTree.hs
src/Immutaball/: CLI.hs  ImmutaballIO.hs  Main.hs  Prelude.hs  Utils.hs
src/Immutaball/Ball/: CLI.hs  Game.hs  Level.hs  LevelSets.hs  Main.hs
src/Immutaball/Ball/CLI/: Config.hs
src/Immutaball/Ball/Level/: Render.hs
src/Immutaball/Ball/State/: Game.hs  LevelSelect.hs  LevelSets.hs  Play.hs  Preplay.hs  Title.hs
src/Immutaball/Putt/: CLI.hs  Main.hs
src/Immutaball/Putt/CLI/: Config.hs
src/Immutaball/Share/: AutoPar.hs  Config.hs  Context.hs  Controller.hs  GLManager.hs  GUI.hs  ImmutaballIO.hs  Level.hs  Math.hs  SDLManager.hs  State.hs  Utils.hs  Video.hs  Wire.hs
src/Immutaball/Share/Config/: Parser.hs  Printer.hs
src/Immutaball/Share/Context/: Config.hs
src/Immutaball/Share/GLManager/: Config.hs  Types.hs
src/Immutaball/Share/ImmutaballIO/: BasicIO.hs  DirectoryIO.hs  GLIO.hs  SDLIO.hs
src/Immutaball/Share/Level/: Analysis.hs  Attributes.hs  Base.hs  Parser.hs  Render.hs  Utils.hs
src/Immutaball/Share/Level/Analysis/: LowLevel.hs
src/Immutaball/Share/Math/: Core.hs  X3D.hs
src/Immutaball/Share/SDLManager/: Config.hs  Types.hs
src/Immutaball/Share/State/: Context.hs
src/Immutaball/Share/Video/: LowLevel.hs  Shaders.hs
src/Test/Data/LabeledBinTree/: Orphans.hs  Test.hs
src/Test/Immutaball/: Test.hs
src/Test/Immutaball/Share/Math/: Orphans.hs  Test.hs
src/Test/Immutaball/Share/Math/Core/: Orphans.hs  Test.hs
src/Test/Immutaball/Share/Math/X3D/: Test.hs
src/Test/Immutaball/Share/State/: Fixtures.hs  Test.hs
src/Test/Immutaball/Share/Wire/: Test.hs
src/dependency-substitutions/: README.md
src/dependency-substitutions/wires-fallback-meta/Control/Wire/: Meta.hs
src/dependency-substitutions/wires-nofallback-meta/Control/Wire/: Meta.hs
src/dependency-substitutions/wires/Control/: Wire.hs
src/dependency-substitutions/wires/Control/Wire/: Controller.hs  Internal.hs
